DLL Builder and Injector added

--- a/DLLBuilder/DLLBuilder.vcxproj
+++ b/DLLBuilder/DLLBuilder.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Desktop\DLL\exempel\dll.cpp" />
+    <ClInclude Include="dll.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\Desktop\DLL\exempel\dll.h" />
+    <ClCompile Include="dll.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
